csrc/swephexp.h

/* values for gregflag in swe_julday() and swe_revjul() */
# define SE_JUL_CAL	0
# define SE_GREG_CAL	1
#define SE_SUN          0       
#define SE_MOON         1       
#define SE_MERCURY      2       
#define SE_VENUS        3       
#define SE_MARS         4       
#define SE_JUPITER      5       
#define SE_SATURN       6       
#define SE_URANUS       7       
#define SE_NEPTUNE      8       
#define SE_PLUTO        9       
#define SE_MEAN_NODE    10      
#define SE_TRUE_NODE    11
#define SE_MEAN_APOG    12      
#define SE_OSCU_APOG    13    
#define SE_EARTH        14      
#define SE_CHIRON       15      
#define SEFLG_SWIEPH    2       /* use SWISSEPH ephemeris */
                                * i.e. with light-time, but without aberration and
			        * light deflection */
#define SEFLG_EQUATORIAL (2*1024)    /* equatorial positions are wanted */
ext_def(int32) swe_calc_ut(double tjd_ut, int32 ipl, int32 iflag, 
	double *xx, char *serr);
/* close Swiss Ephemeris */
ext_def( void ) swe_close(void);
/* set directory path of ephemeris files */
ext_def( void ) swe_set_ephe_path(char *path);
ext_def( double ) swe_julday(
        int year, int month, int day, double hour, 
        int gregflag);
/**************************** 
 * exports from swehouse.c 
 ****************************/

ext_def( int ) swe_houses(
        double tjd_ut, double geolat, double geolon, int hsys, 
	double *cusps, double *ascmc);